adt2keyb.h

#define SC_ESCAPE       MK_SC (0x01,0) // Esc
#define SC_1            MK_SC (0x02,0) // 1 !
#define SC_2            MK_SC (0x03,0) // 2 @
#define SC_3            MK_SC (0x04,0) // 3 #
#define SC_4            MK_SC (0x05,0) // 4 $
#define SC_5            MK_SC (0x06,0) // 5 %
#define SC_6            MK_SC (0x07,0) // 6 ^
#define SC_7            MK_SC (0x08,0) // 7 &
#define SC_8            MK_SC (0x09,0) // 8 *
#define SC_9            MK_SC (0x0A,0) // 9 (
#define SC_0            MK_SC (0x0B,0) // 0 )
#define SC_MINUS        MK_SC (0x0C,0) // - _
#define SC_EQUALS       MK_SC (0x0D,0) // = +
#define SC_BACKSPACE    MK_SC (0x0E,0) // BS
#define SC_TAB          MK_SC (0x0F,0) // Tab
#define SC_Q            MK_SC (0x10,0) // Q
#define SC_W            MK_SC (0x11,0) // W
#define SC_E            MK_SC (0x12,0) // E
#define SC_R            MK_SC (0x13,0) // R
#define SC_T            MK_SC (0x14,0) // T
#define SC_Y            MK_SC (0x15,0) // Y
#define SC_U            MK_SC (0x16,0) // U
#define SC_I            MK_SC (0x17,0) // I
#define SC_O            MK_SC (0x18,0) // O
#define SC_P            MK_SC (0x19,0) // P
#define SC_LEFTBRACKET  MK_SC (0x1A,0) // [ {
#define SC_RIGHTBRACKET MK_SC (0x1B,0) // ] }
#define SC_ENTER        MK_SC (0x1C,0) // Enter (0x1C)
#define SC_CTRL         MK_SC (0x1D,0) // Left or Right Ctrl
#define SC_LCTRL        MK_SC (0x1D,0) // Left Ctrl (0x1D)
#define SC_RCTRL        MK_SC (0x1D,1) // Right Ctrl (0xE0,0x1D)
#define SC_A            MK_SC (0x1E,0) // A
#define SC_S            MK_SC (0x1F,0) // S
#define SC_D            MK_SC (0x20,0) // D
#define SC_F            MK_SC (0x21,0) // F
#define SC_G            MK_SC (0x22,0) // G
#define SC_H            MK_SC (0x23,0) // H
#define SC_J            MK_SC (0x24,0) // J
#define SC_K            MK_SC (0x25,0) // K
#define SC_L            MK_SC (0x26,0) // L
#define SC_SEMICOLON    MK_SC (0x27,0) // ; :
#define SC_QUOTE        MK_SC (0x28,0) // ' "
#define SC_LSHIFT       MK_SC (0x2A,0) // Left Shift (0x2A)
#define SC_BACKSLASH    MK_SC (0x2B,0) // \ |
#define SC_Z            MK_SC (0x2C,0) // Z
#define SC_X            MK_SC (0x2D,0) // X
#define SC_C            MK_SC (0x2E,0) // C
#define SC_V            MK_SC (0x2F,0) // V
#define SC_B            MK_SC (0x30,0) // B
#define SC_N            MK_SC (0x31,0) // N
#define SC_M            MK_SC (0x32,0) // M
#define SC_COMMA        MK_SC (0x33,0) // , <
#define SC_PERIOD       MK_SC (0x34,0) // . >
#define SC_SLASH        MK_SC (0x35,0) // / ? (0x35)
#define SC_RSHIFT       MK_SC (0x36,0) // Right Shift (0x36)
#define SC_NP_MULTIPLY  MK_SC (0x37,0) // Keypad * (0x37)
#define SC_ALT          MK_SC (0x38,0) // Left or Right Alt
#define SC_LALT         MK_SC (0x38,0) // Left Alt (0x38)
#define SC_RALT         MK_SC (0x38,1) // Right Alt (0xE0,0x38)
#define SC_SPACE        MK_SC (0x39,0) // Space
#define SC_CAPSLOCK     MK_SC (0x3A,0) // Caps Lock
#define SC_F1           MK_SC (0x3B,0) // F1
#define SC_F2           MK_SC (0x3C,0) // F2
#define SC_F3           MK_SC (0x3D,0) // F3
#define SC_F4           MK_SC (0x3E,0) // F4
#define SC_F5           MK_SC (0x3F,0) // F5
#define SC_F6           MK_SC (0x40,0) // F6
#define SC_F7           MK_SC (0x41,0) // F7
#define SC_F8           MK_SC (0x42,0) // F8
#define SC_F9           MK_SC (0x43,0) // F9
#define SC_F10          MK_SC (0x44,0) // F10
#define SC_NUMLOCK      MK_SC (0x45,0) // Num Lock
#define SC_SCROLLLOCK   MK_SC (0x46,0) // Scroll Lock (0x46)
#define SC_HOME         MK_SC (0x47,1) // Home (0xE0, 0x47)
#define SC_UP           MK_SC (0x48,1) // Up (0xE0,0x48)
#define SC_PAGEUP       MK_SC (0x49,1) // Page Up (0xE0,0x49)
#define SC_NP_MINUS     MK_SC (0x4A,0) // Keypad -
#define SC_LEFT         MK_SC (0x4B,1) // Left (0xE0,0x4B)
#define SC_RIGHT        MK_SC (0x4D,1) // Right (0xE0,0x4D)
#define SC_NP_PLUS      MK_SC (0x4E,0) // Keypad +
#define SC_END          MK_SC (0x4F,1) // End (0xE0,0x4F)
#define SC_DOWN         MK_SC (0x50,1) // Down (0xE0,0x50)
#define SC_PAGEDOWN     MK_SC (0x51,1) // Page Down (0xE0,0x51)
#define SC_INSERT       MK_SC (0x52,1) // Insert (0xE0,0x52)
#define SC_DELETE       MK_SC (0x53,1) // Delete (0xE0,0x53)
#define SC_F11          MK_SC (0x57,0) // F11
#define SC_F12          MK_SC (0x58,0) // F12
// Fictive scan codes
#define SC_LALT         MK_SC (0xFC,0) // Left ALT
#define SC_RALT         MK_SC (0xFD,0) // Right ALT
#define SC_LCTRL        MK_SC (0xFE,0) // Left CTRL
#define SC_RCTRL        MK_SC (0xFF,0) // Right CTRL
#define kESC     MK_EKEYSC (SC_ESCAPE, '\x1B')   // 0x01 Esc
// 0x02 1 ! (SC_1)
// 0x03 2 @ (SC_2)
// 0x04 3 # (SC_3)
// 0x05 4 $ (SC_4)
// 0x06 5 % (SC_5)
// 0x07 6 ^ (SC_6)
// 0x08 7 & (SC_7)
#define kAstrsk  MK_EKEYSC (SC_8, '*')           // 0x09 8 *
#define kCHastr  MK_EKEYSC (SC_8, '*')           // 0x09 8 *
#define kCHmins  MK_EKEYSC (SC_MINUS, '-')       // 0x0C - _
#define kCHplus  MK_EKEYSC (SC_EQUALS, '+')      // 0x0D = +
#define kBkSPC   MK_EKEYSC (SC_BACKSPACE, '\b')  // 0x0E BS
#define kCtBkSp  MK_EKEYSC (SC_BACKSPACE, 0x7F)  // 0x0E BS
#define kTAB     MK_EKEYSC (SC_TAB, '\t')        // 0x0F Tab
#define kCtrlQ   MK_EKEYSC (SC_Q, 'Q'-'A'+1)     // 0x10 Ctrl + Q
#define kCtrlW   MK_EKEYSC (SC_W, 'W'-'A'+1)     // 0x11 Ctrl + W
#define kCtrlE   MK_EKEYSC (SC_E, 'E'-'A'+1)     // 0x12 Ctrl + E
#define kCtrlR   MK_EKEYSC (SC_R, 'R'-'A'+1)     // 0x13 Ctrl + R
#define kCtrlT   MK_EKEYSC (SC_T, 'T'-'A'+1)     // 0x14 Ctrl + T
#define kCtrlY   MK_EKEYSC (SC_Y, 'Y'-'A'+1)     // 0x15 Ctrl + Y
#define kCtrlI   MK_EKEYSC (SC_I, 'I'-'A'+1)     // 0x17 Ctrl + I
#define kCtrlO   MK_EKEYSC (SC_O, 'O'-'A'+1)     // 0x18 Ctrl + O
#define kCtrlP   MK_EKEYSC (SC_P, 'P'-'A'+1)     // 0x19 Ctrl + P
#define kCHlbrk  MK_EKEYSC (SC_LEFTBRACKET, '[')        // 0x1A Ctrl(?) + [ {
#define kCtLbr   MK_EKEYSC (SC_LEFTBRACKET, '['-'A'+1)  // 0x1A Ctrl + [ {
#define kCHrbrk  MK_EKEYSC (SC_RIGHTBRACKET, ']')       // 0x1B Ctrl(?) + ] }
#define kCtRbr   MK_EKEYSC (SC_RIGHTBRACKET, ']'-'A'+1) // 0x1B Ctrl + ] }
#define kENTER   MK_EKEYSC (SC_ENTER, '\r')      // 0x1C Enter
#define kCtENTR  MK_EKEYSC (SC_ENTER, '\n')      // 0x1C Ctrl + Enter
// 0x1D Left Ctrl (SC_LCTRL_REAL)
// 0xE0,0x1D Right Ctrl (SC_RCTRL_REAL)
#define kCtrlA   MK_EKEYSC (SC_A, 'A'-'A'+1)     // 0x1E Ctrl + A
#define kCtrlS   MK_EKEYSC (SC_S, 'S'-'A'+1)     // 0x1F Ctrl + S
#define kCtrlD   MK_EKEYSC (SC_D, 'D'-'A'+1)     // 0x20 Ctrl + D
#define kCtrlF   MK_EKEYSC (SC_F, 'F'-'A'+1)     // 0x21 Ctrl + F
#define kCtrlG   MK_EKEYSC (SC_G, 'G'-'A'+1)     // 0x22 Ctrl + G
#define kCtrlH   MK_EKEYSC (SC_H, 'H'-'A'+1)     // 0x23 Ctrl + H
#define kCtrlK   MK_EKEYSC (SC_K, 'K'-'A'+1)     // 0x25 Ctrl + K
#define kCtrlL   MK_EKEYSC (SC_L, 'L'-'A'+1)     // 0x26 Ctrl + L
// 0x27 ; : (SC_SEMICOLON)
// 0x28 ' " (SC_QUOTE)
#define kBquote  MK_EKEYSC (SC_BACKQUOTE, '`')   // 0x29 ` ~
// 0x2A Left Shift / SC_LSHIFT
// 0xE0,0x2A Fake Left Shift / SC_LSHIFT_FAKE
#define kSlashR  MK_EKEYSC (SC_BACKSLASH, '\\')  // 0x2B \ |
#define kCtrlZ   MK_EKEYSC (SC_Z, 'Z'-'A'+1)     // 0x2C Ctrl + Z
#define kCtrlX   MK_EKEYSC (SC_X, 'X'-'A'+1)     // 0x2D Ctrl + X
#define kCtrlC   MK_EKEYSC (SC_C, 'C'-'A'+1)     // 0x2E Ctrl + C
#define kCtrlV   MK_EKEYSC (SC_V, 'V'-'A'+1)     // 0x2F Ctrl + V
#define kCtrlB   MK_EKEYSC (SC_B, 'B'-'A'+1)     // 0x30 Ctrl + B
#define kCtrlN   MK_EKEYSC (SC_N, 'N'-'A'+1)     // 0x31 Ctrl + N
#define kCtrlM   MK_EKEYSC (SC_M, 'M'-'A'+1)     // 0x32 Ctrl + M
// 0x33 , < (SC_COMMA)
// 0x34 . > (SC_PERIOD)
#define kSlash   MK_EKEYSC (SC_SLASH, '/')       // 0x35 / ?
// 0x36 Right Shift (SC_RSHIFT)
// 0xE0,0x36 Fake Right Shift (SC_RSHIFT_FAKE)
#define kNPastr  MK_EKEYSC (SC_NP_MULTIPLY, '*') // 0x37 Keypad *
// 0xE0,0x37 Ctrl + PrtScr (SC_PRTSCR)
// 0x38 Left Alt (SC_LALT)
// 0xE0,0x38 Right Alt (SC_RALT)
#define kSPACE   MK_EKEYSC (' ' , SC_SPACE)      // 0x39 Space
// 0x3A Caps Lock (SC_CAPSLOCK)
// 0x3B F1
// 0x3C F2
// 0x3D F3
// 0x3E F4
// 0x3F F5
// 0x40 F6
// 0x41 F7
// 0x42 F8
// 0x43 F9
// 0x44 F10
// 0x45 Num Lock (SC_NUMLOCK)
// 0x46 Scroll Lock (SC_SCROLLLOCK)
#define kNPHOME  MK_EKEYSC (SC_NP_7, '7')        // 0x47 Keypad 7
#define kNPUp    MK_EKEYSC (SC_NP_8, '8')        // 0x48 Keypad 8
#define kNPPgUP  MK_EKEYSC (SC_NP_9, '9')        // 0x49 Keypad 9
#define kNPmins  MK_EKEYSC (SC_NP_MINUS, '-')    // 0x4A Keypad -
#define kShLEFT  MK_EKEYSC (SC_NP_4, '4')        // 0x4B Keypad 4
#define kShRGHT  MK_EKEYSC (SC_NP_6, '6')        // 0x4D Keypad 6
#define kNPplus  MK_EKEYSC (SC_NP_PLUS, '+')     // 0x4E Keypad +
#define kNPEND   MK_EKEYSC (SC_NP_1, '1')        // 0x4F Keypad 1
#define kNPDown  MK_EKEYSC (SC_NP_2, '2')        // 0x50 Keypad 2
#define kNPPgDN  MK_EKEYSC (SC_NP_3, '3')        // 0x51 Keypad 3
#define kNPins   MK_EKEYSC (SC_NP_0, '0')        // 0x52 Keypad 0
#define kNPdel   MK_EKEYSC (SC_NP_PERIOD, '.')   // 0x53 Keypad .
#define kShTAB   MK_EKEYEA (0x0F) // Shift + Tab
#define kAltQ    MK_EKEYEA (0x10) // Alt + Q
#define kAltW    MK_EKEYEA (0x11) // Alt + W
#define kAltE    MK_EKEYEA (0x12) // Alt + E
#define kAltR    MK_EKEYEA (0x13) // Alt + R
#define kAltT    MK_EKEYEA (0x14) // Alt + T
#define kAltU    MK_EKEYEA (0x16) // Alt + U
#define kAltI    MK_EKEYEA (0x17) // Alt + I
#define kAltO    MK_EKEYEA (0x18) // Alt + O
#define kAltP    MK_EKEYEA (0x19) // Alt + P
// 0x1D ? (Alt + Ctrl ?)
#define kAltA    MK_EKEYEA (0x1E) // Alt + A
#define kAltS    MK_EKEYEA (0x1F) // Alt + S
#define kAltD    MK_EKEYEA (0x20) // Alt + D
#define kAltF    MK_EKEYEA (0x21) // Alt + F
#define kAltG    MK_EKEYEA (0x22) // Alt + G
#define kAltH    MK_EKEYEA (0x23) // Alt + H
#define kAltK    MK_EKEYEA (0x25) // Alt + K
#define kAltL    MK_EKEYEA (0x26) // Alt + L
// 0x2A ? (Alt + Left Shift ?)
// 0x2B Alt + '\'
#define kAltZ    MK_EKEYEA (0x2C) // Alt + Z
#define kAltX    MK_EKEYEA (0x2D) // Alt + X
#define kAltC    MK_EKEYEA (0x2E) // Alt + C
#define kAltV    MK_EKEYEA (0x2F) // Alt + V
#define kAltB    MK_EKEYEA (0x30) // Alt + B
#define kAltN    MK_EKEYEA (0x31) // Alt + N
#define kAltM    MK_EKEYEA (0x32) // Alt + M
// 0x33 Alt + ,
// 0x34 Alt + .
// 0x35 Alt + /
// 0x36 ? (Alt + Right Shift ?)
// 0x37 Alt + Keypad *
// 0x38 ? (Left Alt + Right Alt ?)
// 0x39 ? (Alt + Space ?)
// 0x3A ? (Alt + Caps Lock ?)
#define kF1      MK_EKEYEA (0x3B) // F1
#define kF2      MK_EKEYEA (0x3C) // F2
#define kF3      MK_EKEYEA (0x3D) // F3
#define kF4      MK_EKEYEA (0x3E) // F4
#define kF5      MK_EKEYEA (0x3F) // F5
#define kF6      MK_EKEYEA (0x40) // F6
#define kF7      MK_EKEYEA (0x41) // F7
#define kF8      MK_EKEYEA (0x42) // F8
#define kF9      MK_EKEYEA (0x43) // F9
#define kF10     MK_EKEYEA (0x44) // F10
// 0x45 ? (Alt + Num Lock ?)
// 0x46 ? (Alt + Scroll Lock ?)
#define kHOME    MK_EKEYEA (0x47) // Home
#define kUP      MK_EKEYEA (0x48) // Up
#define kPgUP    MK_EKEYEA (0x49) // Page Up
// 0x4A Alt + Keypad -
#define kLEFT    MK_EKEYEA (0x4B) // Left
// 0x4C ? (Alt + Keypad 5 ?)
#define kRIGHT   MK_EKEYEA (0x4D) // Right
// 0x4E Alt + Keypad +
#define kEND     MK_EKEYEA (0x4F) // End
#define kDOWN    MK_EKEYEA (0x50) // Down
#define kPgDOWN  MK_EKEYEA (0x51) // Page Down
#define kINSERT  MK_EKEYEA (0x52) // Insert
#define kDELETE  MK_EKEYEA (0x53) // Delete
#define kShF2    MK_EKEYEA (0x55) // Shift + F2
#define kShF3    MK_EKEYEA (0x56) // Shift + F3
#define kShF5    MK_EKEYEA (0x58) // Shift + F5
#define kShF6    MK_EKEYEA (0x59) // Shift + F6
#define kShF8    MK_EKEYEA (0x5B) // Shift + F8
#define kShF9    MK_EKEYEA (0x5C) // Shift + F9
#define kCtrlF2  MK_EKEYEA (0x5F) // Ctrl + F2
#define kCtrlF3  MK_EKEYEA (0x60) // Ctrl + F3
#define kCtrlF8  MK_EKEYEA (0x65) // Ctrl + F8
#define kCtrlF9  MK_EKEYEA (0x66) // Ctrl + F9
#define kAltF2   MK_EKEYEA (0x69) // Alt + F2
#define kAltF5   MK_EKEYEA (0x6C) // Alt + F5
#define kAltF6   MK_EKEYEA (0x6D) // Alt + F6
#define kAltF8   MK_EKEYEA (0x6F) // Alt + F8
#define kAltF9   MK_EKEYEA (0x70) // Alt + F9
// 0x72 SysRq
#define kCtLEFT  MK_EKEYEA (0x73) // Ctrl + Left
#define kCtRGHT  MK_EKEYEA (0x74) // Ctrl + Right
#define kCtEND   MK_EKEYEA (0x75) // Ctrl + End
#define kCtPgDN  MK_EKEYEA (0x76) // Ctrl + Page Down
#define kCtHOME  MK_EKEYEA (0x77) // Ctrl + Home
#define kAlt1    MK_EKEYEA (0x78) // Alt + 1
#define kAlt2    MK_EKEYEA (0x79) // Alt + 2
#define kAlt3    MK_EKEYEA (0x7A) // Alt + 3
#define kAlt4    MK_EKEYEA (0x7B) // Alt + 4
#define kAlt5    MK_EKEYEA (0x7C) // Alt + 5
#define kAlt6    MK_EKEYEA (0x7D) // Alt + 6
#define kAlt7    MK_EKEYEA (0x7E) // Alt + 7
#define kAlt8    MK_EKEYEA (0x7F) // Alt + 8
#define kAlt9    MK_EKEYEA (0x80) // Alt + 9
#define kAlt0    MK_EKEYEA (0x81) // Alt + 0
#define kCtPgUP  MK_EKEYEA (0x84) // Ctrl + PgUp
extern bool keyboard_sleep;
extern bool CTRL_ALT_DEL_pressed;
extern bool _ctrl_pressed;
extern bool _2x_ctrl_pressed;
void keyboard_init (void);
void keyboard_done (void);
void keyboard_reset_buffer (void);
void keyboard_reset_buffer_alt (void);
void keyboard_toggle_sleep (void);
void wait_until_F11_F12_released (void);
void keyboard_poll_input (void);
bool keypressed (void);
uint16_t GetKey (void);
bool scankey (uint8_t scancode);
bool CapsLock (void);
bool NumLock (void);
bool ScrollLock (void);
bool shift_pressed (void);
bool left_shift_pressed (void);
bool right_shift_pressed (void);
bool both_shifts_pressed (void);
bool alt_pressed (void);
bool ctrl_pressed (void);
bool ctrl_tab_pressed (void);
bool LookUpKey (uint16_t key, const uint16_t *table, uint8_t size);
void screen_saver (void);